--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -18,17 +18,8 @@ jobs:
         trigger: false
 
     - task: wipe-env
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: virtmerlin/c0-worker
-        inputs:
-          - name: bosh-azure
-        run:
-          path: bosh-azure/ci/tasks/init/wipe-env.sh
-        params:
+      file: bosh-azure/ci/tasks/wipe-env.yml
+      params:
           arg_wipe: {{arg_wipe}}
           azure_bosh_terraform_template: {{azure_bosh_terraform_template}}
           azure_subscription_id: {{azure_subscription_id}}
@@ -39,17 +30,8 @@ jobs:
           azure_terraform_prefix: {{azure_terraform_prefix}}
 
     - task: init-azure-resources
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: virtmerlin/c0-worker
-        inputs:
-          - name: bosh-azure
-        run:
-          path: bosh-azure/ci/tasks/init/init-azure-resources.sh
-        params:
+      file: bosh-azure/ci/tasks/init-azure-resources.yml
+      params:
           azure_bosh_terraform_template: {{azure_bosh_terraform_template}}
           azure_subscription_id: {{azure_subscription_id}}
           azure_tenant_id: {{azure_tenant_id}}
@@ -60,6 +42,8 @@ jobs:
           azure_terraform_vnet_cidr: {{azure_terraform_vnet_cidr}}
           azure_terraform_subnet_bosh_cidr: {{azure_terraform_subnet_bosh_cidr}}
           bosh_domain: {{bosh_domain}}
+          vm_admin_username: {{azure_vm_admin}}
+          vm_admin_password: {{azure_vm_password}}
 ########################
 ## bootstrap boot ######
 ########################
@@ -71,6 +55,21 @@ jobs:
     - aggregate:
         - get: bosh-azure
           trigger: false
+          passed: [ init-env ]
+    - task: prepare-bosh-manifest
+      file: bosh-azure/ci/tasks/prepare-bosh-manifest.yml
+      params:
+        bosh_hostname: {{bosh_hostname}}
+        bosh_account: {{bosh_account}}
+        bosh_account_password: {{bosh_account_password}}
+        bosh_public_ip: {{bosh_public_ip}}
+        nats_password: {{nats_password}}
+        postgres_password: {{postgres_password}}
+        registry_password: {{registry_password}}
+        blobstore_director_password: {{blobstore_director_password}}
+        blobstore_agent_password: {{blobstore_agent_password}}
+        hm_password: {{hm_password}}
+        
     - task: init-bosh
       file: bosh-azure/ci/tasks/init-bosh.yml
       params:
